test/failing/nostruct2.trunnel

struct x {
  struct y yy[8];
}
